force-app/main/default/objects/Mosaic_Product_Affinity_Mock__dlm/fields/Affinity_Score__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Score__c</fullName>
    <label>Affinity_Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Affinity_Score</labelOverride>
        <masterLabel>Affinity_Score</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>