force-app/main/default/objects/Mosaic_Product_Affinity_Mock__dlm/fields/Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction__c</fullName>
    <label>Last_Interaction</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Last_Interaction</labelOverride>
        <masterLabel>Last_Interaction</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>