force-app/main/default/objects/Mosaic_Product_Affinity_Mock__dlm/fields/Purchase_Count__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Count__c</fullName>
    <label>Purchase_Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Purchase_Count</labelOverride>
        <masterLabel>Purchase_Count</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>