force-app/main/default/objects/Mosaic_Product_Affinity_Mock__dlm/fields/Recommendation_Priority__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Priority__c</fullName>
    <label>Recommendation_Priority</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Recommendation_Priority</labelOverride>
        <masterLabel>Recommendation_Priority</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>