force-app/main/default/objects/Mosaic_Product_Affinity_Mock__dlm/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <label>Total_Spent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Total_Spent</labelOverride>
        <masterLabel>Total_Spent</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>